# Labelling-tool

./: .gitignore  1_generate_master_plan.txt  3_fully_code_out_implementation.txt  README.md  pyproject.toml  starter_question.txt  wireframe.pptx
docs/: image-labeler-masterplan.md
src/: image_handler.py  label_manager.py  main.py  ui_components.py
